--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="./images/profile.jpg" alt ="Profile Photo">
             <h1> Raymond Byers</h1>
             <p style="font-family: 'Courier New', Courier, monospace; color: brown"> Software Engineering student at Iowa State University</p>
-            <p> A.A.S. in 3D Animation from Washtenaw Community College</p>
+            <p> A.A.S. in 3D Animation from Washtenaw Community College. I am pursuing a degree in Software Engineering to become a Technical Artist or a Graphics Programmer.</p>
         </div>
     </section>
 
@@ -62,4 +62,5 @@
     </footer>
     
 </body>
+
 </html>
